@@ -1,3 +1,4 @@
+- ErmaC : Rename decompress_lzvn function to lzvn_decode follow Apple source name.
 - ErmaC : Add more chameleon UI stuff (default) made by blackosx
 - ErmaC : Rollback changes for msdos.c (2327) thx to bltz
 - ErmaC : Split out states generator from acpi_patcher (Credits to Clover Teams)
